Fix spacing

--- a/stylesheets/quiz.css
+++ b/stylesheets/quiz.css
@@ -8,22 +8,19 @@
   border: none;
 }
 
-
 h3 {
   border-bottom: 1px solid black;
   margin-bottom: 10px;
   padding: 2px;
   text-align: left;
-  color: #9932CC;
+  color: #9932cc;
   letter-spacing: 0.1em;
 }
 
 #header {
-  /*position: fixed;*/
-  /*height: 80px;*/
   width: 100%;
-  background: #FFFFFF;
-  color: #0000FF;
+  background: #ffffff;
+  color: #0000ff;
   border-bottom-color: #ffffff;
   border-bottom-style: solid;
   border-bottom-width: 1px;
@@ -36,27 +33,25 @@ h3 {
 }
 
 body {
-   background-color: #FFFFFF;
-   height: 100%;
-   font-family: 'Lato', sans-serif;
-   font-family: 'Muli', sans-serif;
-   font-size: 1.5em;
-   background-attachment: fixed;
-   background-repeat: no-repeat;
-   background-position: left;
-   margin: 0;
-   padding: 0;
-   height: 100%;
-   color: black;
+  background-color: #ffffff;
+  height: 100%;
+  font-family: 'Lato', sans-serif;
+  font-family: 'Muli', sans-serif;
+  font-size: 1.5em;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: left;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  color: black;
 }
 
 .main-content {
-  margin:0 auto;
-  /*width: 30%;*/
-  /*height: 400px;*/
+  margin: 0 auto;
   padding-top: 60px;
   position: relative;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 30px;
   font-family: 'Muli', sans-serif;
 }
@@ -75,7 +70,7 @@ nav ul li {
 }
 
 a {
-  color: #01B5AA;
+  color: #01b5aa;
   text-decoration: none;
 }
 
@@ -95,7 +90,6 @@ img {
   padding: 10px;
 }
 
-
 p {
   font-family: 'Lato', sans-serif;
 }
@@ -108,20 +102,20 @@ td {
 }
 
 td p {
- margin: 0px;
- font-size: 14px;
+  margin: 0px;
+  font-size: 14px;
 }
 
-img  {
-  float:right;
+img {
+  float: right;
   width: 400px;
 }
 
 p.example {
- float: right;
- clear:both;
- font-size: 11px;
- font-style: italic;
+  float: right;
+  clear: both;
+  font-size: 11px;
+  font-style: italic;
 }
 
 iframe {
@@ -130,34 +124,40 @@ iframe {
 }
 
 a:visited {
-  color: #01B5AA;
+  color: #01b5aa;
 }
 
 a:hover {
   color: red;
 }
 
-label.labels { font-size: 12px; }
-td.output { font-size: 12px;}
+label.labels {
+  font-size: 12px;
+}
+td.output {
+  font-size: 12px;
+}
 
 #ans {
-  float:right;
+  float: right;
   clear: both;
   font-size: 12px;
 }
 
-input[type=button], input[type=reset] {
-  color:#9932CC;
-  font:2.4em Futura, ‘Century Gothic’, AppleGothic, sans-serif;
-  background-color: #FFFFFF;
+input[type='button'],
+input[type='reset'] {
+  color: #9932cc;
+  font: 2.4em Futura, ‘Century Gothic’, AppleGothic, sans-serif;
+  background-color: #ffffff;
 
   padding: 5px;
-  font-size:120%;
-  cursor:pointer;
+  font-size: 120%;
+  cursor: pointer;
 }
 
-input[type=button]:hover, input[type=reset]:hover {
-  background-color:rgba(255,204,0,0.8);
+input[type='button']:hover,
+input[type='reset']:hover {
+  background-color: rgba(255, 204, 0, 0.8);
 }
 
 #main {
@@ -166,5 +166,3 @@ input[type=button]:hover, input[type=reset]:hover {
   margin-left: auto;
   margin-right: auto;
 }
-
-
