--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,9 @@
-html, h1, h2, h3, div, body {
+html,
+h1,
+h2,
+h3,
+div,
+body {
   display: block;
   font-family: 'Work Sans', sans-serif;
 }
@@ -11,7 +16,7 @@ header {
 header h3 {
   display: inline-block;
   font-size: 18px;
-  color: #2196F3;
+  color: #2196f3;
   letter-spacing: 4px;
   text-transform: uppercase;
   margin: 35px 0;
@@ -35,17 +40,17 @@ nav li {
 
 a {
   font-size: 20px;
-  color: #2196F3;
+  color: #2196f3;
   text-decoration: none;
 }
 
 a:visited {
-  color: #2196F3;
+  color: #2196f3;
   text-decoration: none;
 }
 
 a:active {
-  color: #2196F3;
+  color: #2196f3;
   text-decoration: none;
 }
 
@@ -76,7 +81,7 @@ nav ul li {
 
 .name {
   text-transform: uppercase;
-  font-size: 20px
+  font-size: 20px;
 }
 
 .project-text {
@@ -89,7 +94,7 @@ nav ul li {
 }
 
 .tagline {
-  color: #2196F3;
+  color: #2196f3;
   text-align: center;
   margin: 10px 10px 15px 10px;
   padding-bottom: 40px;
@@ -133,7 +138,7 @@ section {
 
 .bordered {
   border: 2px solid white;
-  background: #E67247;
+  background: #e67247;
   color: white;
 }
 
@@ -154,7 +159,8 @@ section {
   text-align: center;
 }
 
-td, tr {
+td,
+tr {
   padding: 10px;
 }
 
@@ -165,7 +171,7 @@ td, tr {
 /* crab racer styles */
 
 .beach-racer {
-  background-image: url("../projects/crab_racer/beach_racer.png");
+  background-image: url('../projects/crab_racer/beach_racer.png');
   background-attachment: fixed;
   background-repeat: no-repeat;
   font-family: 'Lato', sans-serif;
@@ -182,10 +188,10 @@ td, tr {
   background-size: cover;
 }
 
-h2  {
+h2 {
   color: white;
   text-align: center;
-  font-family:  'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-family: 'Muli', sans-serif;
 }
 
@@ -207,18 +213,20 @@ h2  {
   margin: 0 auto;
   width: 90px;
   display: block;
-  font-size:20px;
-  font-weight:700;
-  color:#fff;
-  line-height:35px;
-  border-radius:10px;
-  -moz-border-radius:10px;
-  -webkit-border-radius:10px;behavior:url(js/PIE.htc);
-  position:relative;
-  text-decoration:none;
+  font-size: 20px;
+  font-weight: 700;
+  color: #fff;
+  line-height: 35px;
+  border-radius: 10px;
+  -moz-border-radius: 10px;
+  -webkit-border-radius: 10px;
+  behavior: url(js/PIE.htc);
+  position: relative;
+  text-decoration: none;
 }
 
-#result, .instructions {
+#result,
+.instructions {
   width: 100%;
   color: white;
   text-align: center;
